[Debug].[Customer].[AllOfArea]:All Of Customer Part Debuged

--- a/App.EndPoints.MvcUi/Views/Customer/Index.cshtml
+++ b/App.EndPoints.MvcUi/Views/Customer/Index.cshtml
@@ -42,7 +42,7 @@
                                         
                                         <tr>
                                             <th scope="row"><span>@counter</span></th>
-                                            <td><span>@item.PayedAt</span></td>
+                                            <td><span>@item.PayedAt.ToPersianNumericDateTime()</span></td>
                                             <td><span>@item.TotalPrice تومان</span></td>
                                             <td>
                                                 <span class="tbl-btn">
