--- a/App.EndPoints.MvcUi/Views/Shared/Components/ParentCategoryNavbar/Default.cshtml
+++ b/App.EndPoints.MvcUi/Views/Shared/Components/ParentCategoryNavbar/Default.cshtml
@@ -24,7 +24,7 @@
                             </div>
                             <div class="ec-category-desc">
                                 <a asp-controller="Product" asp-action="ParentCategoryProducts" asp-route-id="@item.Id" class="cat-show-all">
-                                    <h3> @item.Title <span title="Category Items">(53)</span></h3>
+                                    <h3> @item.Title @*<span title="Category Items">(53)</span>*@</h3>
                                 </a>
                             </div>
 
