--- a/App.EndPoints.MvcUi/Views/Customer/EditProfile.cshtml
+++ b/App.EndPoints.MvcUi/Views/Customer/EditProfile.cshtml
@@ -15,7 +15,7 @@
 
                 </div>
             </div>
-            <div class="ec-shop-rightside col-lg-9 col-md-12">
+                 <div class="ec-shop-rightside col-lg-9 col-md-12">
                 <div class="ec-vendor-dashboard-card">
                     <div class="ec-vendor-card-header">
                         <h5> پروفایل من</h5>
@@ -24,39 +24,58 @@
                     
                         <form asp-controller="Customer" asp-action="EditProfile" method="post" enctype="multipart/form-data" class="row g-3">
 
-                    <div class="ec-vendor-upload-detail">
+                            <div class="ec-vendor-upload-detail">
                         <div class="col-md-6 space-t-15">
-                            <label asp-for="@Model.FirstName" class="form-label"></label>
+                            <label asp-for="@Model.FirstName" class="form-label"> </label>
+                            <span asp-validation-for="@Model.FirstName" class="text-danger"></span>
                             <input asp-for="@Model.FirstName" type="text" class="form-control">
                         </div>
                         <div class="col-md-6 space-t-15">
-                            <label asp-for="@Model.LastName" class="form-label"></label>
+                            <label asp-for="@Model.LastName" class="form-label"> </label>
+                                    <span asp-validation-for="@Model.LastName" class="text-danger"></span>
                             <input asp-for="@Model.LastName" type="text" class="form-control">
                         </div>
                         <div class="col-md-6 space-t-15">
-                            <label asp-for="@Model.Birthdate" class="form-label"></label>
+                            <label asp-for="@Model.Birthdate" class="form-label"> </label>
+                                    <span asp-validation-for="@Model.Birthdate" class="text-danger"></span>
                             <input asp-for="@Model.Birthdate" type="text" class="form-control">
                         </div>
 
                         <div class="col-md-4 space-t-15">
-                            <label  class="form-label">نام استان</label>
-                            <select name="categories" class="form-select">
-                                <option value="individual">تهران</option>
+                            <label  asp-for="@Model.ProvinceId" class="form-label"> </label>
+                                    <span asp-validation-for="@Model.ProvinceId" class="text-danger"></span>
+                            <select asp-for="@Model.ProvinceId" class="form-select">
+                                @foreach (var item in @Model.Provinces)
+                                {
+                                    @if (item.Id == @Model.ProvinceId)
+                                    {
+                                        <option value="@item.Id" selected>@item.Name</option>
+
+                                    }
+                                    else
+                                    {
+                                        <option value="@item.Id">@item.Name</option>
+                                    }
+
+                                }
                             </select>
                         </div>
 
                         <div class="col-md-4 space-t-15">
-                            <label asp-for="@Model.City" class="form-label">نام شهر</label>
+                                    <label asp-for="@Model.City" class="form-label">  </label>
+                                    <span asp-validation-for="@Model.City" class="text-danger"></span>
                             <input asp-for="@Model.City" type="text" class="form-control">
                         </div>
 
                         <div class="col-md-4 space-t-15">
-                            <label asp-for="@Model.PostalCode" class="form-label">کد پستی</label>
+                            <label asp-for="@Model.PostalCode" class="form-label">  </label>
+                                    <span asp-validation-for="@Model.PostalCode" class="text-danger"></span>
                             <input asp-for="@Model.PostalCode" type="text" class="form-control">
                         </div>
 
                         <div class="col-md-12 space-t-15">
-                            <label asp-for="@Model.FullAddress" class="form-label">آدرس کامل</label>
+                            <label asp-for="@Model.FullAddress" class="form-label"> </label>
+                                    <span asp-validation-for="@Model.FullAddress" class="text-danger"></span>
                             <textarea asp-for="@Model.FullAddress" class="form-control" id="exampleFormControlTextarea1"
                                       rows="3"></textarea>
                         </div>
@@ -66,7 +85,8 @@
                             <button type="submit" class="btn btn-primary">به روز رسانی</button>
                         </div>
 
-                        </form>
+                        
+                    </form>
                     
                     </div>
                 </div>
