--- a/App.EndPoints.MvcUi/Views/Shared/Components/CustomerPanelSidebar/Default.cshtml
+++ b/App.EndPoints.MvcUi/Views/Shared/Components/CustomerPanelSidebar/Default.cshtml
@@ -1,12 +1,21 @@
-﻿<!-- Sidebar Category Block -->
+﻿@model CustomerDetailsViewModel;
+@inject FileUploadPathsDto filePaths;
+
+<!-- Sidebar Category Block -->
 <div class="ec-sidebar-block">
     <div class="ec-vendor-block">
+
+        <div class="ec-vendor-block-detail">
+            <img class="v-img" src="~/@filePaths.Profiles/@Model.ProfileImgUrl" alt="">
+            <h5>@Model.FirstName @Model.LastName</h5>
+            <p> موجودی : <b>@Model.wallet </b>تومان</p>
+        </div>
+
         <div class="ec-vendor-block-items">
             <ul>
-                <li><a asp-controller="Customer" asp-action="Profile">پروفایل کاربر</a></li>
+                <li><a asp-controller="Customer" asp-action="EditProfile">پروفایل کاربر</a></li>
                 <li><a asp-controller="Customer" asp-action="Index">تاریخچه</a></li>
-                @* <li><a href="cart.html">سبد خرید</a></li>*@
-                <li><a asp-controller="Customer" asp-action="Index"> افزایش موجودی</a></li>
+                <li><a asp-controller="Customer" asp-action="IncreaseWallet"> افزایش موجودی</a></li>
                 <li><a asp-controller="Comment" asp-action="GetAll"> نظرات من</a></li>
                 <li><a asp-controller="Customer" asp-action="AllAuctions">مزایده ها</a></li>
             </ul>
