--- a/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using App.Domain.Core._Booth.Dtos.BoothDtos;
+﻿@using App.Frameworks.Web.DateConverter
+@using App.Domain.Core._Booth.Dtos.BoothDtos;
 @using App.Domain.Core._User.Entities;
 @using App.Domain.Core._Products.Enums;
 @using App.Domain.Core._Common.Dtos.AppSettingDtos;
