[Debug].[Customer].[PanelController]:Seller GetDitalis Mehtod Name changed

--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/SellerPanel/Index.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/SellerPanel/Index.cshtml
@@ -127,7 +127,7 @@
                 </div>
                 <!-- بلوک لیست مزایده ها -->*@
 
-                <!-- بلوک نمایش نمودار -->
+@*                <!-- بلوک نمایش نمودار -->
                 <div class="ec-vendor-dashboard-card">
                     <div class="ec-vendor-card-header">
                         <h5>آمار رشد</h5>
@@ -139,7 +139,7 @@
                         <canvas id="growthChart"></canvas>
                     </div>
                 </div>
-                <!-- بلوک نمایش نمودار -->
+                <!-- بلوک نمایش نمودار -->*@
             
             </div>
             <!-- Sidebar Area Start -->
