[Debug].[home].[Index-View]:#Not Important# text change

--- a/App.EndPoints.MvcUi/Views/Home/Index.cshtml
+++ b/App.EndPoints.MvcUi/Views/Home/Index.cshtml
@@ -69,12 +69,12 @@
                                             ارسال پیشنهاد
                                         </a>
                                     </div>
-                                    <div class="countdowntimer">
+@*                                    <div class="countdowntimer">
                                         <span class="ec-spe-count-desc">
                                             عجله کن! پیشنهاد به پایان می رسد در:
                                         </span>
                                         <span id="ec-spe-count-3"></span>
-                                    </div>
+                                    </div>*@
                                 </div>
                             </div>
                         </div>
