--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/Auction/Create.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/Auction/Create.cshtml
@@ -49,7 +49,8 @@
 
                         <form method="post">
                             @Html.HiddenFor(m => m.ProductId)
-
+                            @Html.HiddenFor(m => m.MainUrl)
+                            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
                             <div class="row d-flex align-items-end mt-3">
                                 <label class="form-label">زمان آغاز:</label>
                                 <div class=" col-4">
@@ -57,19 +58,36 @@
                                     <input asp-for="@Model.StartYear" class="form-control" type="text" />
                                 </div>
 
-                                <div class=" col-4">
+                                <div class=" col-2">
                                     <label asp-for="@Model.StartMonth" class="form-label"></label>
-                                    <input asp-for="@Model.StartMonth" class="form-control" type="text" />
+                                    <select asp-for="@Model.StartMonth" class="form-select">
+                                        @for (int i = 1; i < 13; i++)
+                                        {
+                                            <option value="@i"> @i</option>
+                                        }
+
+                                    </select>
                                 </div>
-                            </div>
-                            <div class="row d-flex align-items-end mt-3">
-                                <div class=" col-4">
+
+                                <div class=" col-2">
                                     <label asp-for="@Model.StartDay" class="form-label"></label>
-                                    <input asp-for="@Model.StartDay" class="form-control" type="text" />
+                                    <select asp-for="@Model.StartDay" class="form-select">
+                                        @for (int i = 1; i < 31; i++)
+                                        {
+                                            <option value="@i"> @i</option>
+                                        }
+
+                                    </select>
                                 </div>
-                                <div class=" col-4">
+                                <div class=" col-2">
                                     <label asp-for="@Model.StartHour" class="form-label"></label>
-                                    <input asp-for="@Model.StartHour" class="form-control" type="text" />
+                                    <select asp-for="@Model.StartHour" class="form-select">
+                                        @for (int i = 0; i < 24; i++)
+                                        {
+                                            <option value="@i"> @i</option>
+                                        }
+
+                                    </select>
                                 </div>
                             </div>
 
@@ -81,24 +99,40 @@
                                     <input asp-for="@Model.EndYear" class="form-control" type="text" />
                                 </div>
 
-                                <div class=" col-4">
+                                <div class=" col-2">
                                     <label asp-for="@Model.EndMonth" class="form-label"></label>
-                                    <input asp-for="@Model.EndMonth" class="form-control" type="text" />
+                                    <select asp-for="@Model.EndMonth" class="form-select">
+                                        @for (int i = 1; i < 13; i++)
+                                        {
+                                            <option value="@i"> @i</option>
+                                        }
+
+                                    </select>
                                 </div>
-                            </div>
-                            <div class="row d-flex align-items-end mt-3">
-                                <div class=" col-4">
+                                <div class=" col-2">
                                     <label asp-for="@Model.EndDay" class="form-label"></label>
-                                    <input asp-for="@Model.EndDay" class="form-control" type="text" />
+                                    <select asp-for="@Model.EndDay" class="form-select">
+                                        @for (int i = 1; i < 31; i++)
+                                        {
+                                            <option value="@i"> @i</option>
+                                        }
+
+                                    </select>
                                 </div>
-                                <div class=" col-4">
+                                <div class=" col-2">
                                     <label asp-for="@Model.EndHour" class="form-label"></label>
-                                    <input asp-for="@Model.EndHour" class="form-control" type="text" />
+                                    <select asp-for="@Model.EndHour" class="form-select">
+                                        @for (int i = 0; i < 24; i++)
+                                        {
+                                            <option value="@i"> @i</option>
+                                        }
+
+                                    </select>
                                 </div>
                             </div>
 
 
-                            <div class="row d-flex align-items-end mt-5">
+                            <div class="row d-flex align-items-end mt-2">
                                 <div class=" col-4">
                                     <label asp-for="@Model.BasePrice" class="form-label"></label>
                                     <input asp-for="@Model.BasePrice" class="form-control" type="text" />
