--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
@@ -13,6 +13,7 @@
 @using App.Domain.Core._User.Enums;
 @using App.Domain.Core._Products.Enums;
 @using App.Frameworks.Web.DateConverter;
+@using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Auctions;
 
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
