--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
@@ -14,6 +14,8 @@
 @using App.Domain.Core._Products.Enums;
 @using App.Frameworks.Web.DateConverter;
 @using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Auctions;
+@using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels._Admin;
+
 
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
